test/00-squidgame.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: squidgame
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: myapp
  name: myapp
  namespace: squidgame
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - image: redis
        name: database
      - image: alexixva/python-flask-distroless 
        name: python-flask-distroless
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: myapp
  name: myapp
  namespace: squidgame
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: myapp
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: minimal-ingress 
  annotations: 
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/service-upstream: "true"
  namespace: squidgame
spec: 
  rules: 
  - host: 34.134.109.145.nip.io
    http: 
      paths: 
      - path: /myapp
        pathType: Prefix 
        backend: 
          service: 
            name: myapp 
            port: 
              number: 5000 
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: error-injector
  namespace: squidgame
data:
 nginx.conf: |-
    events {}
    http {
        server {
          listen 5000;
            location / {
                return 500;
            }
        }
    }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-injector
  namespace: squidgame
  labels:
    app: error-injector
spec:
  selector:
    matchLabels:
      app: error-injector
  replicas: 1
  template:
    metadata:
      labels:
        app: error-injector
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: error-injector
---
apiVersion: v1
kind: Service
metadata:
  name: error-injector
  namespace: squidgame
spec:
  ports:
  - name: service
    port: 5000
  selector:
    app: error-injector
---
apiVersion: split.smi-spec.io/v1alpha1
kind: TrafficSplit
metadata:
  name: error-split
  namespace: squidgame
spec:
  service: myapp
  backends:
  - service: myapp
    weight: 700m
  - service: error-injector
    weight: 300m
