test/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sopes.dev-op.software
    http:
      paths:
      - pathType: Prefix
        path: / #/route
        backend:
          service:
            name: svc-grpc
            port:
              number: 2000
